IMPALA-2155: Mistake in word index calculation in Bitmap::Get/Set

The Bitmap::Get/Set functions had a mistake in the calculation of the
word index, as it was shifting the index value by 8 bits instead of 6.
This patch fixes this mistake and add a bitmap-test.

Change-Id: I3591ab9a771ba535be1a1ca7b3b349055d6e673f
Reviewed-on: http://gerrit.cloudera.org:8080/571
Reviewed-by: Ippokratis Pandis <ipandis@cloudera.com>
Tested-by: Internal Jenkins